[package]
name = "sysreq"
version = "0.1.4"
edition = "2021"
authors = ["William Venner <william@venner.io>"]
description = "Simple, virtually-zero-dependencies HTTP client wrapping a system client"
license = "MIT OR Apache-2.0"
keywords = ["http", "https", "client", "request"]
categories = ["web-programming::http-client"]
repository = "https://github.com/WilliamVenner/sysreq"

[dependencies]
url = "2"
lazy_static = "1"

[dev-dependencies]
reqwest = { version = "0", default-features = false, features = ["blocking", "rustls-tls-native-roots"] }
difference = "2"