[package]
name = "sysreq"
version = "0.1.5"
edition = "2021"
authors = ["William Venner <william@venner.io>"]
description = "Simple, virtually-zero-dependencies HTTP client wrapping a system client"
license = "MIT OR Apache-2.0"
keywords = ["http", "https", "client", "request"]
categories = ["web-programming::http-client"]
repository = "https://github.com/WilliamVenner/sysreq"

[features]
default = ["validate"]
validate = ["url"]

[dependencies]
url = { version = "2", optional = true }

[dev-dependencies]
reqwest = { version = "0", default-features = false, features = ["blocking", "rustls-tls-native-roots"] }
difference = "2"